# openapi.yaml
@@ -9,6 +9,43 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+  schemas:
+    StatementItem:
+      type: object
+      properties:
+        id:
+          type: number
+        name:
+          type: string
+        description:
+          type: string
+        url:
+          type: string
+        input_description:
+          type: string
+        type:
+          type: string
+        isPrivate:
+          type: string
+        definition:
+          type: string
+    RequestItem:
+      type: object
+      properties:
+        _key:
+          type: number
+        status:
+          type: string
+        statement_key:
+          type: number
+        cost:
+          type: number
+        proof_key:
+          type: string
+        input:
+          type: object
+        aggregated_mode_id:
+          type: number
 paths:
   /healthcheck:
     get:
@@ -149,3 +186,142 @@ paths:
           description: Unauthorized
         '400':
           description: User not found
+
+  /producer:
+    post:
+      summary: Register as producer(or update)
+      operationId: registerProducer
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                url:
+                  type: string
+                ethAddress:
+                  type: string
+      responses:
+        '200':
+          description: Producer registered or updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  userId:
+                    type: number
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  url:
+                    type: string
+                  ethAddress:
+                    type: string
+        '401':
+          description: Invalid credentials
+
+  /statement/{id}:
+    get:
+      summary: Get statement by id
+      operationId: getStatement
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: number
+          description: Statement Id
+      responses:
+        '200':
+          description: Statement
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatementItem'
+        '401':
+          description: Invalid credentials
+        '404':
+          description: Statement not found
+
+  /statement:
+    get:
+      summary: Get statements by filter
+      operationId: getStatements
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: Statement
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/StatementItem'
+        '401':
+          description: Invalid credentials
+    post:
+      summary: Create statement
+      operationId: createStatement
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                url:
+                  type: string
+                ethAddress:
+                  type: string
+      responses:
+        '200':
+          description: Statement created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatementItem'
+        '401':
+          description: Invalid credentials
+
+  /request/{id}:
+    get:
+      summary: Get request by id
+      operationId: getRequest
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: number
+          description: Request Id
+      responses:
+        '200':
+          description: Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RequestItem'
+        '401':
+          description: Invalid credentials
+        '404':
+          description: Request not found
